# thelio-io2-windows

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
lhm-helper/: Program.cs  lhm-helper.csproj
src/: client.rs  device.rs  eventlog.rs  fan_curve.rs  ipc.rs  main.rs  power.rs  thelio_io.rs  thermal.rs  thermal_lib.rs
