[package]
name = "thelio-io2-windows"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Windows daemon for the System76 Thelio Io 2 fan control board"
license = "GPL-2.0"

[[bin]]
name = "thelio-io2-daemon"
path = "src/main.rs"

[[bin]]
name = "thelio-io2-client"
path = "src/client.rs"

[dependencies]
# HID support (Thelio IO 2)
hidapi = "2.6"

# Windows service framework
windows-service = "0.8"

# Error handling
anyhow = "1"
thiserror = "2"

# Serialization for IPC
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
log = "0.4"
simple_logger = { version = "5", features = ["timestamps"] }

# HTTP client for LibreHardwareMonitor web API
ureq = "3"
base64 = "0.22"

# Synchronization
parking_lot = "0.12"

# Windows API bindings (power events, named pipes, etc.)
# This sub-table must come last so the keys above are not absorbed into it.
[dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_System_Services",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Console",
    "Win32_System_EventLog",
    "Win32_System_SystemInformation",
]

[profile.release]
opt-level = 3
lto = true
